Refactor product repository for pagination and sorting